--- a/Views/Railway/Index.cshtml
+++ b/Views/Railway/Index.cshtml
@@ -146,7 +146,7 @@
         <div class="col-6 d-flex flex-row align-items-center">
             <img src="https://images.ixigo.com/image/upload/train/ecb835b55223186c49d55750b422ed10-oscpe.png" width="70" height="70" />
             <div class="ms-4">
-                <h5><span>&#8377;</span>0 Payment Gateway Fee on Payments via UPI</h5>
+                <h5>0 VND Payment Gateway Fee on Payments via UPI</h5>
             </div>
         </div>
         <div class="col-6 d-flex flex-row align-items-center">
@@ -158,7 +158,7 @@
         <div class="col-6 d-flex flex-row align-items-center">
             <img src="https://images.ixigo.com/image/upload/train/a21427142a38e7331574b034aa4a687a-lwpxr.png" width="70" height="70" />
             <div class="ms-4">
-                <h5>Instant Refund on Indian Railway Reservation Cancellation</h5>
+                <h5>Instant Refund on VietNam Railway Reservation Cancellation</h5>
             </div>
         </div>
         <div class="col-6 d-flex flex-row align-items-center">
@@ -233,7 +233,7 @@
                             <div class="d-flex flex-row">
                                 <img src="https://images.ixigo.com/image/upload/trains/551e245f7ea23fdd947331d0aeb1a4f8-stzha.png" height="56" width="56" />
                                 <div class="ms-2">
-                                    <div class="">Tatkal Railway Reservation</div>
+                                    <div class="">VietNam Railway Reservation</div>
                                     <div class="">Book tatkal train tickets quikly</div>
                                 </div>
                             </div>
