--- a/Views/Railway/SearchRoute.cshtml
+++ b/Views/Railway/SearchRoute.cshtml
@@ -49,7 +49,7 @@
                         @foreach(var coach in Model.Item2){
                             <div class="form-check form-check-inline ">
                                 <input type="checkbox" class="form-check-input" id="coach_@coach.Id" name="coach" />
-                                <label class="form-check-label" for="coach_@coach.Id">@coach.Name</label>
+                                <label class="form-check-label" for="coach_@coach.Id">@coach.CoachNo</label>
                             </div>
                         }
                     </div>
@@ -262,7 +262,7 @@
                                     <div class="p-3 w-25">
                                         <div class="">
                                             <a href="" class="h5" style="color: rgb(236, 88, 36); text-decoration: none;">
-                                                <span class="">@item.Train.Name</span>
+                                                <span class="">@item.Train.Code</span>
                                                 <span class="train-name"></span>
                                             </a>
                                         </div>
@@ -271,18 +271,18 @@
                                         <div class="row w-md-50">
                                             <div class="col-3 col-lg-2">
                                                 <div class="">
-                                                    <a class="text-decoration-none fw-bold" style="color: rgb(236, 88, 36);" href="">@item.Route.StartStation.StationName</a>
+                                                    <a class="text-decoration-none fw-bold" style="color: rgb(236, 88, 36);" href="">@item.Route.StartStation.Name</a>
                                                     <div class="c-tooltip bottom">
                                                         <div class="tip"></div>
                                                     </div>
                                                 </div>
-                                                <div class="time">@item.StartAt.ToString("hh:mm tt")</div>
-                                                <div class="date">@item.StartAt.ToString("ddd, dd MMM")</div>
+                                                <div class="time">@item.Departure.ToString("hh:mm tt")</div>
+                                                <div class="date">@item.Departure.ToString("ddd, dd MMM")</div>
                                             </div>
                                             <div class="col-3">
                                                 <div class="mt-4 d-flex flex-column align-items-center">
                                                     <p class="text-center">@{
-                                                            var time = item.EndAt - item.StartAt;
+                                                            var time = item.Arrival - item.Departure;
                                                             Html.DisplayFor(x => time.Hours);
                                                         }</p>
                                                     <img src="~/images/svg/Icon_train.svg.png" width="50px" />
@@ -290,13 +290,13 @@
                                             </div>
                                             <div class="col-3 col-lg-2">
                                                 <div class="">
-                                                    <a class="text-decoration-none fw-bold" style="color: rgb(236, 88, 36);" href="">@item.Route.EndStation.StationName</a>
+                                                    <a class="text-decoration-none fw-bold" style="color: rgb(236, 88, 36);" href="">@item.Route.EndStation.Name</a>
                                                     <div class="c-tooltip bottom">
                                                         <div class="tip"></div>
                                                     </div>
                                                 </div>
-                                                <div class="time">@item.EndAt.ToString("hh:mm tt")</div>
-                                                <div class="date">@item.EndAt.ToString("ddd, dd MMM")</div>
+                                                <div class="time">@item.Arrival.ToString("hh:mm tt")</div>
+                                                <div class="date">@item.Arrival.ToString("ddd, dd MMM")</div>
                                             </div>
                                         </div>
                                     </div>
@@ -307,10 +307,10 @@
                                             <a role="button" class="text-decoration-none text-black" data-bs-toggle="collapse" href=".@item.TrainCode" aria-expanded="false" aria-controls="@item.TrainCode">
                                                 <div class="card">
                                                     <div class="card-body d-flex flex-column  p-2">
-                                                        <div class="fs-6 text-center" style="color: #EC5B24;">Coach @Html.DisplayFor(x=>detail.Name)</div>
-                                                        <div>Last: @Html.DisplayFor(x=>detail.SeatAvailable)</div>
+                                                        <div class="fs-6 text-center" style="color: #EC5B24;">Coach @Html.DisplayFor(x=>detail.CoachNo)</div>
+                                                        <div>Last: @Html.DisplayFor(x=>detail.NoOfSeats)</div>
                                                         <div>
-                                                            Cost: @String.Format(CultureInfo.InvariantCulture,"{0:0,0}", detail.CoachFare) VND
+                                                            Cost: @String.Format(CultureInfo.InvariantCulture,"{0:0,0}") VND
                                                         </div>
                                                     </div>
                                                 </div>
