--- a/Views/Shared/_LayoutofTuong.cshtml
+++ b/Views/Shared/_LayoutofTuong.cshtml
@@ -13,6 +13,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Space+Mono&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Allerta+Stencil">
+    @* Slick Carousel *@
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+
     <script src="https://kit.fontawesome.com/2f28ccbbd6.js" crossorigin="anonymous"></script>
     
     <style>
@@ -69,27 +74,6 @@
                         </ul>
                         <ul class="navbar-nav mb-2 mb-lg-0 d-flex flex-row">
                             <li class="nav-item">
-                                <a class="nav-link header-nav-link" href="/offers">
-                                    <span >
-                                        <svg width="30" height="30" xmlns="http://www.w3.org/2000/svg">
-                                            <g fill="none" fill-rule="evenodd">
-                                                <path d="M0 0h30v30H0z" />
-                                                <g transform="translate(4 4)">
-                                                    <ellipse fill-opacity=".18" fill="#595959" fill-rule="nonzero" cx="9.092" cy="12.581" rx="9.092" ry="8.818" />
-                                                    <path d="m20.138 17.98-6.78 3.635c-.962.51-2.094.51-3.056.016l-6.765-3.543a3.39 3.39 0 0 1-1.8-3.047l.032-3.992v-4.1a3.42 3.42 0 0 1 1.8-3.016L10.301.375a3.241 3.241 0 0 1 3.056.016l6.858 3.65A3.399 3.399 0 0 1 22 7.044v3.82l-.078 4.162a3.45 3.45 0 0 1-1.784 2.955z" stroke="#595959" />
-                                                    <g fill="#595959" fill-rule="nonzero">
-                                                        <path d="M8.673 8.837a.998.998 0 0 1 0-1.995.998.998 0 0 1 0 1.995zM16.042 14.205c0 .542-.465.99-1.008.99-.543 0-.978-.464-.978-.99 0-.541.466-.99 1.009-.99.543 0 .977.449.977.99z" />
-                                                    </g>
-                                                    <path stroke="#595959" stroke-linecap="round" stroke-linejoin="round" d="m7.85 15.071 8.053-8.028" />
-                                                </g>
-                                            </g>
-                                        </svg>
-
-                                        <span class="d-md-inline d-none me-2">Offers</span>
-                                    </span>
-                                </a>
-                            </li>
-                            <li class="nav-item">
                                 <a class="nav-link header-nav-link" data="5" href="">
                                     <span  >
                                         <svg width="30" height="30" xmlns="http://www.w3.org/2000/svg">
@@ -108,7 +92,7 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link header-nav-link" data="5" href="">
+                                <a class="nav-link header-nav-link" data="5" href="#" data-bs-toggle="modal" data-bs-target="#loginModal">
                                     <span >
                                         <svg width="30" height="30" xmlns="http://www.w3.org/2000/svg">
                                             <g fill="none" fill-rule="evenodd">
@@ -124,6 +108,22 @@
                                         </svg>
 
                                         <span class="d-md-inline d-none me-2">Login/SignUp</span>
+                                    </span>
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link header-nav-link position-relative btn_showcart" href="#offcanvasRight" data-bs-target="#offcanvasRight" data-bs-toggle="offcanvas" aria-controls="offcanvasRight">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-package">
+                                        <line x1="16.5" y1="9.4" x2="7.5" y2="4.21">
+                                        </line>
+                                        <path d="M21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16z">
+                                        </path>
+                                        <polyline points="3.27 6.96 12 12.01 20.73 6.96"></polyline>
+                                        <line x1="12" y1="22.08" x2="12" y2="12">
+                                        </line>
+                                    </svg>
+                                    <span class="position-absolute start-100 translate-middle badge rounded-pill bg-orange">
+                                        <span class="fw-bold countOrder">1</span>
                                     </span>
                                 </a>
                             </li>
@@ -151,7 +151,7 @@
                                 </div>
                                 <div class="col-2">
                                     <a class="text-danger" href="">
-                                        <img src="./svg/trash3.svg" class="ms-4" />
+                                        <i class="bi bi-trash3"></i>
                                     </a>
                                 </div>
                             </div>
@@ -162,6 +162,66 @@
                     <div class="d-flex justify-content-between mt-4">
                         <a href="" class="btn btn-orange">Buy Now</a>
                         <a href="" class="btn btn-outline-secondary">Clear Cart</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-lg">
+                <div class="modal-dialog">
+                    <div class="modal-content position-relative">
+                        <div class="modal-header position-absolute top-0 end-0 z-2">
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            <div class="container-fluid">
+                                <div class="row">
+                                    <div class="col-5 d-flex flex-column justify-content-center align-items-center position-relative">
+                                        <div class="h-100 w-100 login-banner" >
+                                        </div>
+                                        <img src="~/images/tauthehe3-toangoi.jpg" class="img-fluid z-1" />
+                                    </div>
+                                    <div class="col-7 mt-4 ps-4">
+                                        <div class="text-end pe-3">
+                                            <p class="text-secondary">Don't have an account? <a asp-controller="Railway" asp-action="SignUp">SIGN UP</a></p>
+                                        </div>
+                                        <div class="text-start fs-4 my-4" style="font-family: 'Allerta Stencil', sans-serif;">
+                                            Log in to ixigo
+                                        </div>
+                                        <form>
+                                            <div class="row mb-3">
+                                                <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
+                                                <div class="col-sm-10">
+                                                    <input type="email" class="form-control" id="inputEmail3">
+                                                </div>
+                                            </div>
+                                            <div class="row mb-3">
+                                                <label for="inputPassword3" class="col-sm-2 col-form-label">Password</label>
+                                                <div class="col-sm-10">
+                                                    <input type="password" class="form-control" id="inputPassword3">
+                                                </div>
+                                            </div>
+                                            <button type="submit" class="btn btn-orange">Sign in</button>
+                                        </form>
+                                        <div class="my-4 text-center">OR</div>
+                                        <div class="d-flex flex-row justify-content-center align-items-center mb-3">
+                                            <div class="">
+                                                <a href="#" role="button" class="rounded-pill btn btn-outline-primary">
+                                                    <img src="https://upload.wikimedia.org/wikipedia/commons/c/c1/Google_%22G%22_logo.svg" />
+                                                    Sign in Google
+                                                </a>
+                                            </div>
+                                        </div>
+                                        <div class="text-secondary ">
+                                            By logging in, I understand &amp; agree to ixigo
+                                            <a target="_blank" href="/about/more-info/terms-of-use/">Terms of Use</a>
+                                            and
+                                            <a target="_blank" href="/about/more-info/privacy/">Privacy Policy</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -180,11 +240,28 @@
             </div>
         </footer>
     </div>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    
     <script src="~/lib/jquery-ui-1.13.2.custom/jquery-ui.min.js"></script>
+
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
+    @* Slick Carousel *@
+    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+
+    <script>
+        const popoverTriggerList = document.querySelectorAll('[data-bs-toggle="popover"]');
+        const popoverList = [...popoverTriggerList].map(popoverTriggerEl => new bootstrap.Popover(popoverTriggerEl));
+        const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]')
+        const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl));
+        $('.multiple-class').slick({
+            infinite: true,
+            slidesToShow: 4,
+            slidesToScroll: 4,
+            prevArrow: "<button type='button' class='slick-prev pull-left' style='margin-right:20px'><i class='fa fa-angle-left' aria-hidden='true'></i></button>",
+            nextArrow: "<button type='button' class='slick-next pull-right'style='margin-left:20px'><i class='fa fa-angle-right' aria-hidden='true'></i></button>"
+        });
+    </script>
 </body>
 </html>
