--- a/Views/Railway/Index.cshtml
+++ b/Views/Railway/Index.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@model List<SelectListItem>
+
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_LayoutofTuong.cshtml";
@@ -35,18 +36,19 @@
         <div class="tab-content z-2 bg-white pt-3 px-4" id="myTabContent" style="height: 200px;width: 800px;border-radius: 0 0 4px 4px;">
             <div id="trainSearchForm" class="tab-pane fade show active w-100" role="tabpanel" tabindex="0">
                 <div class="d-flex flex-row justify-content-center align-items-center">
-                    <form class="row" method="get" asp-action="SearchRoute">
+                    <form class="row" method="post" asp-action="Search">
                         <div class="col-md-4 ">
                             <label for="gaDi" class="form-label">From</label>
-                            <input id="gaDi" name="gaDi" class="form-control" type="text" />
+                            <select class="form-select" name="from" asp-items="Model"></select>
+
                         </div>
                         <div class="col-md-4">
                             <label for="gaDen" class="form-label">To</label>
-                            <input type="text" class="form-control" id="gaDen" name="gaDen" />
+                            <select class="form-select" name="to" asp-items="Model"></select>
                         </div>
                         <div class="col-md-3 mx-auto">
                             <label for="ngayXP" class="form-label">Date</label>
-                            <input type="date" class="form-control" id="ngayXP" name="ngayXP" />
+                            <input type="date" class="form-control" id="ngayXP" name="date" />
                         </div>
                         <div class="col-12 mt-2">
                             <button type="submit" class="text-uppercase btn btn-orange">
